--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ addons:
 before_install:
 - chmod a+x ./Scripts/MSBuild.sh
 
-#install:
 script:
-- ./Scripts/MSBuild.sh
+#- ./Scripts/MSBuild.sh
 - sonar-scanner
