--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,8 +15,12 @@ sonar.links.issue=https://github.com/SibaDoge1/FlowTest/issues
 # =====================================================
 #   Properties that will be shared amongst all modules
 # =====================================================
+# Comma-separated paths to directories with sources (required)
+sonar.sources=/Product/bin
+sonar.java.binaries=/Product/bin
 
-# Info required for Sonar 
-sonar.sources=./Product
+# Language
+sonar.language=java
+
+# Encoding of the source files
 sonar.sourceEncoding=UTF-8
-sonar.languege=java
