--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,8 +16,8 @@ sonar.links.issue=https://github.com/SibaDoge1/FlowTest/issues
 #   Properties that will be shared amongst all modules
 # =====================================================
 # Comma-separated paths to directories with sources (required)
-sonar.sources=/Product/bin
-sonar.java.binaries=/Product/bin
+sonar.sources=./Product/src
+sonar.java.binaries=./Product/bin
 
 # Language
 sonar.language=java
